--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "joi": "^5.1.0",
     "jquery": "^2.1.1",
     "leven": "^1.0.1",
+    "look": "~0.1.3",
     "mailchimp-api": "^2.0.7",
     "malarkey": "^1.1.0",
     "marky-markdown": "^5.0.2",
+    "memwatch": "~0.2.2",
     "moment": "^2.9.0",
     "month": "^1.0.0",
     "mousetrap": "0.0.1",
